# igarss2024

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/outputs/optuna_gunet/: optimization_logs_10.pkl  optimization_logs_100.pkl  optimization_logs_150.pkl  optimization_logs_200.pkl  optimization_logs_25.pkl  optimization_logs_5.pkl  optimization_logs_50.pkl
notebooks/: 20230723_IGARSS_simulation.ipynb  hyperparameter_tuning.ipynb  synthetic_experiments.ipynb  testing.ipynb  utils.ipynb
